# Bobot

./: .env.example  .gitignore  Dockerfile  README.md  SECRET_KEY.py  api.py  api_youtube.py  bot.py  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requeriments.txt  vercel.json
.github/workflows/: docker-ci.yml  python-app.yml
front/: README.md  index.html  package.json  pnpm-lock.yaml  vercel.json
front/src/: style.css
src/bobot/: __main__.py  bot.py  config.py  urls.py
src/bobot/adapters/: discord_adapter.py
src/bobot/ai/: assistant.py  base.py  factory.py  gpt4all_client.py  http_client.py  lmstudio_client.py  ollama_client.py  prompts.py  runtime.py
src/bobot/commands/: handlers.py  router.py
src/bobot/domain/: exceptions.py
src/bobot/helpers/: python_help.py
src/bobot/services/: cache.py  history.py  permissions.py  profile.py  queue.py  quiz.py  rate_limit.py
src/bobot/storage/: in_memory.py
src/bobot/utils/: formatting.py  logging.py  text.py  validation.py
tests/: conftest.py  test_architecture.py  test_assistant.py  test_bot.py  test_bot_quiz.py  test_config_urls.py  test_llm.py  test_quiz.py  test_quiz_cov.py
